spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -72,8 +72,7 @@ svg.cursor-pointer:hover {
 /*added top margin*/
 .navbar {
   margin-bottom: 2%;
-  margin-top: 2%;
-  padding-bottom: 2%;
+  margin-top: 1%;
 }
 
 .navbar-content {
